cbaf 1.12.0 - 2020-04-08
-------------------------

New Features

- Terms are updated. Package can recongize even more cancer studies!
- Improvements for methylation analysis.
- If desired genes are entered as a vector, they are converted to a
  list without returning an error.





cbaf 1.10.0 - 2020-04-08
-------------------------

New Features

- A unified method for increasing the consistency of cancer terms used by
  various functions. This enables easier maintanance and faster inclusion of
  new terms whenever available.
- Terms are updated. Package can recongize even more cancer studies!
- Incluion of additional checkpoint to control the name of requested cancer
  studies.





cbaf 1.8.0 - 2019-10-28
-------------------------

New Features

- Optimization has led obtainOneStudy() and obtainMultipleStudies() functions to
  work faster.

- If an entered cancer has corrupted data or lacks the requested data type,
  obtainMultipleStudies() doesn't return error. That study is automatically
  omitted from results and its name is printed on console.

- AvailableData() function now works more accurately but unfortunately, it is
  generally slower: Due to inconsistancy in the terms that cgdsr uses,
  AvailableData() has to check the availability of the data at two different
  levels.





cbaf 1.6.0 - 2019-04-28
-------------------------

New Features

- heatmapOutput now uses a more accurate algorithm for determining the margins.

- Terms are updated. Package can recongize more cancers!






cbaf 1.4.0 - 2018-10-30
-------------------------

New Features

- obtainOneStudy() and obtainMultipleStudies() functions can obtain data for
  groups of genes each possess more than 250 genes (Virtually unlimited gene
  number).

- A new argument for xlsxOutput() function to exchange the columns and rows.





cbaf 1.2.0 - 2018-04-26
-------------------------

New Features

- heatmapOutput() can now determine the heatmap margines and column and row
  name sizes automatically.