@@ -8,8 +8,8 @@
 #' \tabular{lllll}{
 #' Package: \tab cbaf \cr
 #' Type: \tab Package \cr
-#' Version: \tab 1.12.0 \cr
-#' Date: \tab 2020-10-26 \cr
+#' Version: \tab 1.13.1 \cr
+#' Date: \tab 2020-12-07 \cr
 #' License: \tab Artistic-2.0 \cr
 #' }
 #'
@@ -172,7 +172,7 @@ xlsxOutput <- function(submissionName, transposeResults = FALSE){
 
   } else{
 
-    cutoff.phrase <- "z-score cutoff"
+    cutoff.phrase <- "log z-score cutoff"
 
   }
 
